# pinn-der-ai4x

./: README.md  pyproject.toml
examples/burgers-experiment/: pinn.py
examples/burgers-kedro-experiment/: .gitignore  README.md  pyproject.toml  requirements.txt
examples/burgers-kedro-experiment/conf/: logging.yml
examples/burgers-kedro-experiment/conf/base/: parameters.yml
examples/burgers-kedro-experiment/src/burgers_kedro_experiment/: __init__.py  __main__.py  pinn_trainer.py  pipeline.py  settings.py
examples/laplace-experiment/: pinn.py
examples/laplace-kedro-experiment/: README.md  pyproject.toml
examples/laplace-kedro-experiment/conf/: logging.yml
examples/laplace-kedro-experiment/conf/base/: parameters.yml
examples/laplace-kedro-experiment/src/laplace_kedro_experiment/: __init__.py  __main__.py  pinn_trainer.py  pipeline.py  settings.py
examples/laplace-kedro-experiment/src/laplace_kedro_experiment/pipelines/: __init__.py
pinn_der_ai4x/: __init__.py  der_pinn_lib.py  pinn_lib.py
