[tool.poetry]
name = "pinn-der-ai4x"
version = "0.1.0"
description = ""
authors = ["Yip Jun Kai <yipjunkai@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.6.0"
numpy = "1.26.0"
neuromancer = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
