[tool.poetry]
name = "pinn-der-ai4x"
version = "0.1.0"
description = ""
authors = ["Yip Jun Kai <yipjunkai@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.5.1"
numpy = "^1.23.5"
neuromancer = "^1.5.1"
kedro-umbrella = {git = "https://github.com/CPS-research-group/kedro-umbrella.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
