[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "laplace_kedro_experiment"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.10",]

[project.scripts]
laplace-kedro-experiment = "laplace_kedro_experiment.__main__:main"

[tool.kedro]
package_name = "laplace_kedro_experiment"
project_name = "laplace-kedro-experiment"
kedro_init_version = "0.19.10"
tools = "['Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "laplace_kedro_experiment.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
